--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
     </div>
 </div>
 <br>
+    <div class="container">
+        <hr>
+    </div>
 <br>
+<div class="container">
 <div class="row">
     <div class="col-md-4">
         <div class="card">
@@ -56,6 +60,7 @@
                     <th>NIM</th>
                     <th>NAMA</th>
                     <th>GENDER</th>
+                    <th>OPTION</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -64,6 +69,7 @@
             </table>
         </div>
     </div>
+</div>
 </div>
 <script type="text/javascript" src="/js/jquery.min.js"></script>
 <script type="text/javascript" src="/bootstrap/js/bootstrap.js"></script>
